--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="container-fluid background vh-100">
     <div class="row vh-100 justify-content-center align-items-center">
-      <div class="col-6 bg-white rounded p-5">
+      <div class="col-12 col-md-8 col-lg-6 bg-white rounded p-5">
         <div class="d-flex"><img src="assets/images/icon-star.svg" alt="" class="mb-4">
           <h1 class="fw-bold ms-3 mb-4">FAQs</h1>
         </div>
